# tuido

./: .env.example  .gitignore  CLOUD_SYNC_SPEC.md  ICONS_AND_FONTS.md  IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  debug_sync.py  dev.sh  docs.md  github_issues_implementation_plan.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish-test.yml  publish.yml
docs/: ICONS_AND_FONTS.md  IMPLEMENTATION.md  PROJECT_STATUS.md  settings_plan.md
todo_tui/: __init__.py  app.py  cloud_sync.py  encryption.py  icons.py  models.py  storage.py  theme.css  themes.py
todo_tui/demo_data/: scratchpad.md
todo_tui/widgets/: __init__.py  clock_widget.py  dashboard.py  dialogs.py  forecast_widget.py  pomodoro_widget.py  productivity_tabs.py  project_list.py  scratchpad.py  snippets.py  stats_card.py  task_detail.py  task_list.py  weather_widget.py
webapp-api/check/: route.ts
webapp-api/download/: route.ts
webapp-api/lib/: schemas.ts
webapp-api/types/: index.ts
webapp-api/upload/: route.ts
