[project]
name = "todo-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "plotext>=5.3.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "textual>=0.73.0",
    "textual-dev>=1.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[project.scripts]
tuido = "todo_tui.app:main"
tuido-dev = "todo_tui.app:dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["todo_tui*"]
exclude = ["data*", "docs*"]
