[project]
name = "todo-tui"
version = "0.1.0"
description = "A beautiful Terminal User Interface (TUI) todo application built with Textual, featuring multiple themes, Pomodoro timer, and markdown notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
    "plotext>=5.3.2",
    "pyperclip>=1.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "textual[syntax]>=0.73.0",
    "textual-dev>=1.6.1",
    "tree-sitter>=0.25.0",
    "tree-sitter-markdown>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[project.scripts]
todo = "todo_tui.app:main"
tuido = "todo_tui.app:main"
tuido-dev = "todo_tui.app:dev"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["todo_tui*"]
exclude = ["data*", "docs*"]
